# signet-wallet

solution/: run_balance.sh  run_spend.sh
solution/rust/: Cargo.toml
solution/rust/balance/: Cargo.toml
solution/rust/balance/src/: lib.rs  main.rs
solution/rust/spend/: Cargo.toml
solution/rust/spend/src/: lib.rs  main.rs
