[package]
name = "balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
bitcoin = "0.31.1"
bs58 = { version = "0.5.0", features = ["check"] }
ecdsa = "0.16.9"
elliptic-curve = "0.13.8"
flamegraph = "0.6.4"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
k256 = "0.13.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"
ripemd = "0.1.3"
secp256k1 = "0.28.1"
serde_json = "1.0.111"
sha2 = "0.10.8"
tracing = "0.1.40"
