[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false


[package]
name = "spend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
balance = {path = "../balance"}
hex = "0.4.3"
libsecp256k1 = "0.7.1"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
